# Inference-Log-Analytics

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
analysis/: guide.md
configs/: default.yaml
data/: sample_logs.txt
notebooks/: demo.ipynb
reports/: README.md
src/: __init__.py  analyzer.py
src/alerts/: __init__.py  rules.py
src/analyzers/: __init__.py  anomaly.py  errors.py  latency.py  throughput.py
src/parsers/: __init__.py  base.py  custom.py  onnx_runtime.py  tensorflow_serving.py  triton.py
src/visualizers/: __init__.py  dashboard.py  plots.py
tests/: test_parsers.py
